--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/telescope": "^5.2",
+        "laravel/tinker": "^2.9",
+        "saade/filament-fullcalendar": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
