--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/resource": "^6.1.15",
+        "@fullcalendar/resource-timegrid": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15"
     }
 }
