--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "saade/filament-fullcalendar": "^3.2",
         "spatie/laravel-data": "^4.18",
         "spatie/laravel-permission": "^6.10",
-        "spatie/laravel-query-builder": "^6.3"
+        "spatie/laravel-query-builder": "^6.3",
+        "stechstudio/filament-impersonate": "^3.16"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
