--- a/.env.example
+++ b/.env.example
@@ -48,14 +48,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# Mailpit Configuration (for local development)
+# Mailpit SMTP: localhost:1025
+# Mailpit Web UI: http://localhost:8025
+# For production, configure SendGrid or other mail service
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -64,3 +69,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+UMAMI_WEBSITE_ID=eb5dcc68-4b36-4cfd-b66d-d72a9f75635b
